--- a/app/index.html
+++ b/app/index.html
@@ -4,11 +4,15 @@
 <head>
 
 	<meta charset="utf-8">
-	<title> Трейдинг и инвестиции</title>
+	<title>Трейдинг и инвестиции</title>
 	<meta name="description" content="Индивидуальное обучение трейдингу от Артёма Ивина">
 	<meta name="viewport" content="width=device-width">
 	<link rel="icon" href="images/favicon.png">
-	<meta property="og:image" content="img/dest/preview.jpg">
+	<meta property="og:title" content="Трейдинг и инвестиции">
+	<meta property="og:site_name" content="Трейдинг и инвестиции">
+	<meta property="og:url" content="artemivin.ru">
+	<meta property="og:description" content="Индивидуальное обучение трейдингу от Артёма Ивина">
+	<meta property="og:image" content="images/preview.jpg">
 	<link rel="stylesheet" href="css/app.min.css">
 
 </head>
@@ -253,13 +257,13 @@
 						<span class="item__desc">Ты сможешь лично задать все вопросы по своему портфелю, стратегии,
 							техническому и фундаментальному анализу или сложной ситуации с конкретной акцией. Или например
 							заполнить пробелы в теме криптовалют или IPO.</span>
-							<div class="item__price">
-								<span>Цена курса:</span>
-								<div class="discount">
-									<span class="discount__sale">5 000р</span>
-									<span class="item__price--accent">3 500р</span>
-								</div>
+						<div class="item__price">
+							<span>Цена курса:</span>
+							<div class="discount">
+								<span class="discount__sale">5 000р</span>
+								<span class="item__price--accent">3 500р</span>
 							</div>
+						</div>
 					</div>
 				</div>
 				<div class="rate__item">
@@ -269,22 +273,22 @@
 						<span class="item__desc">Я каждый день выкладываю точки входа и выхода из основных сделок, которые
 							есть у меня в портфеле. Если у тебя нет времени и желания учиться самому, но ты хочешь уже сейчас
 							зарабатывать на фондовом рынке, этот вариант для тебя.</span>
-							<div class="item__price item__price--width">
-								<div class="price__wrapp">
-									<span>Цена за 1 месяц:</span>
-									<div class="discount">
-										<span class="item__price--accent">1 000р</span>
-									</div>
-								</div>
-								
-								<br>
-								<div class="price__wrapp">
-									<span>Цена за 1 год:</span>
-									<div class="discount">
-										<span class="item__price--accent item__price--margin">10 000р</span>
-									</div>
+						<div class="item__price item__price--width">
+							<div class="price__wrapp">
+								<span>Цена за 1 месяц:</span>
+								<div class="discount">
+									<span class="item__price--accent">1 000р</span>
 								</div>
 							</div>
+
+							<br>
+							<div class="price__wrapp">
+								<span>Цена за 1 год:</span>
+								<div class="discount">
+									<span class="item__price--accent item__price--margin">10 000р</span>
+								</div>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
