--- a/todo.html
+++ b/todo.html
@@ -15,7 +15,7 @@
 	 ? Цены на однин уровень + старая цена+процент скидки+добавить ещё один вариант Цена за 1 год 10 тыс
 	 ? Блок ЧЕМУ ВЫ НАУЧИТЕСЬ? (В одну колонку, убрать стили flex)
 	 ? Бегущий текст наезжает на фото, сделать в 2 строки (проверить)
-	 todo Ссылку в соц сетях (превью)
+	 ? Ссылку в соц сетях (превью)
 	 ? Большой отступ на главном экране – поднять фотографию наверх.
 	 ? Заменить плюсы на другие иконки
 	 ? Часто задаваемые вопросы желтый цвет заменить на белый
