--- a/app/index.html
+++ b/app/index.html
@@ -137,9 +137,9 @@
 				<p class="now__description">
 					<span>-Более 50% годовой доходности стабильно.</span>
 					<span>-6 лет торговли в плюс</span>
-					<span class="now__description--accent">-На деньги с трейдинга посетил 61 страну.</span>
+					<span>-На деньги с трейдинга посетил 61 страну.</span>
 					<span>-Все ученики зарабатывают на бирже</span>
-					<span><a
+					<span><a class="now__description--accent"
 							href="https://vk.com/away.php?to=https%3A%2F%2Fwww.tinkoff.ru%2Finvest%2Fsocial%2Fprofile%2FArtem_Ivin%2F&el=snippet">-Статистика
 							открыта и говорит сама за себя<br> в отличии от 99% курсов</a></span>
 					<span>ПОЛНОСТЬЮ ИНДИВИДУАЛЬНОЕ обучение, <br> где вам ответят на ВАШИ вопросы </span>
@@ -527,9 +527,9 @@
 							<ul>
 								<li><img src="images/dest/sber.png" alt="Sber">Сбербанк: 4279 5300 2056 1132</li>
 								<li><img src="images/dest/tinkoff.png" alt="tinkoff">Тинькофф: 5536 9138 0112 4880</li>
-								<li><a href="https://money.yandex.ru/to/410011542528807" target="_blank"><img
+								<li><a href="https://yoomoney.ru/to/410011542528807" target="_blank"><img
 											src="images/dest/yandex.png" alt="yandex">ЮMoney: 410011542528807</a></li>
-								<li><a href="https://qiwi.com/payment/form/99" target="_blank"><img src="images/dest/qiwi.png"
+								<li><a href="https://qiwi.com/payment/form/99999?extra[%27accountType%27]=phone&extra%5B%27account%27%5D=79537385366" target="_blank"><img src="images/dest/qiwi.png"
 											alt="qiwi">Qiwi: +79537385366</a></li>
 								<li><img src="images/dest/btc.png">16f6eVesR9WRCjQ5gG7nPgRJDyuQeXwycB</li>
 							</ul>
@@ -541,7 +541,7 @@
 							<ul>
 								<li>
 									Рынок – это механизм передачи денег от нетерпеливых к терпеливым (Уоррен Баффет) </li>
-								<li class="politic__link">Политика конфиденциальности</li>
+								<li class="politic__link"><a href="#">Политика конфиденциальности</a></li>
 							</ul>
 						</div>
 					</div>
