--- a/todo.html
+++ b/todo.html
@@ -9,7 +9,7 @@
 
 
 <!--
-	 todo Переработать bg (Плавность перехода) + в блоке ЧЕМУ ТЫ НАУЧИШЬСЯ? убрать с фона текст
+	 ? Переработать bg (Плавность перехода) + в блоке ЧЕМУ ТЫ НАУЧИШЬСЯ? убрать с фона текст
 	 ? После фразы -Статистика открыта и говорит сама за себя добавить ссылку (Смотреть вк)
 	 ? Отступы подредактировать (Почему курс Артема Ивина) (Баг)
 	 ? Цены на однин уровень + старая цена+процент скидки+добавить ещё один вариант Цена за 1 год 10 тыс
@@ -27,5 +27,13 @@
 	 ? В Политику конфеденциальности нужно добавить название сайта
 	 ? Убрать из описания сайта название шаблона Startup HTML добавить туда Индивидуальное обучение трейдингу от Артёма Ивина
 	 ? Проверить отзывы!!!
+	 ? Первое фото чуть ближе к центру сместить нужно, как то она совсем сбоку, (можно надписи левее сдвинуть)
+	 ? Бегущую строку сделать как раньше.
+	 todo В блоке Пробелы в знаниях слово Выбор на заднем фоне убрать 
+	 ? Статистика открыта и говорит сама за себя вЫДЕЛИТЬ
+	 ? Перед блоком ЗАПИШИТЕСЬ НА КУРС нужно сократить пробел между блоками.
+	 ? Политика конфиденциальности (ПОДСВЕТИТЬ)
+	 ? Ссылку для пополнения qiwi ( qiwi.com/p/79537385366 ) а юмани вот эту ( https://yoomoney.ru/to/410011542528807 )
+	 
 	 todo Провести полную оптимизацию, проверить валидность!!!
 -->
