--- a/todo.html
+++ b/todo.html
@@ -1,39 +1,39 @@
+<!-- 
+todo 1. в первой кнопке Записаться на курс нужно сделать поп ап окно, так как человек кликает, и пропускает весь сайт.
+
+*2. Значек биткоина и рамка, убрать
+
+todo 3. В тарифах выровнять текст влево и добавить поп апы с подробностями курсов
+
+? 4. вместо одной, сделать 2 карусели рядом, одна статистика, вторая отзывы. как думаешь, правильное решение?
+
+? 5.На айфон 11 в списке для выбора тарифа не вмещаются полные названия. По последним двум непонятно в чем разница.
+
+
+*. Контактная форма не проверяет правильность заполнения полей (я в телефон указал буквы, в почте - кириллицу и спец.символы)
+
+todo 9.Не хватает информационного блока с кратким ознакомлением, что такое трейдинг и инвестиции. Хотя бы краткую информации. Это будет полезно не только для пользователей, но и для SEO и индексировании поисковыми роботами.
+
+todo 10. Желтый круг на переднем фото убрать, пестрит.
+
+
+Мелкие доработки
+* 1. Статистика открыта и говорит сама за себя- ссылку лучше в новом окне чтобы открывалась
+* 2. Ссылки на соцсети лучше также открывать в новом окне, чтобы не уводить с сайта
+* 3. В сообщении после отправки заявки лучше указать не только, что она принята, а чего теперь ждать(написать что мы с вами свяжемся ближайшее время)
+* 4 Блок чему Вы научитесь увеличить шрифт (Просмотреть на всех разрешениях)
+*.5 Для пунктов меню и иконок соцсетей .добавить ховер 
+*.6 В мобильной версии уменьшить пространстов после " подитика конфиденциальности" 
+*.7 в мобильной версии кнопку записаться на курс выровнять по центру как остальные
+
+! Мои неджоработки
+
+! 1. в мобильной версии кнопка whatsapp не работает
 
 
 
+? Работает
 
+? 6.Когда подаёшь заявку плашка с «Спасибо» не закрывается, нужно именно выходить из страницы, а хотелось бы остаться на сайте.
 
-
-
-
-
-
-<!--
-	 ? Переработать bg (Плавность перехода) + в блоке ЧЕМУ ТЫ НАУЧИШЬСЯ? убрать с фона текст
-	 ? После фразы -Статистика открыта и говорит сама за себя добавить ссылку (Смотреть вк)
-	 ? Отступы подредактировать (Почему курс Артема Ивина) (Баг)
-	 ? Цены на однин уровень + старая цена+процент скидки+добавить ещё один вариант Цена за 1 год 10 тыс
-	 ? Блок ЧЕМУ ВЫ НАУЧИТЕСЬ? (В одну колонку, убрать стили flex)
-	 ? Бегущий текст наезжает на фото, сделать в 2 строки (проверить)
-	 ? Ссылку в соц сетях (превью)
-	 ? Большой отступ на главном экране – поднять фотографию наверх.
-	 ? Заменить плюсы на другие иконки
-	 ? Часто задаваемые вопросы желтый цвет заменить на белый
-	 ? Под формой в обязательном порядке необходимо добавить согласие на обработку данных. (Интересно моё мнение)
-	 ? форма записи на курс добавить выбор тарифа
-	 ? Заменить favicon
-	 ? Реквизиты для оплаты кликабельны все (Поджредактировать стили)
-	 ? В разделе Информация зачем-то подсвечивается цитата Баффета (Подпрпавить стили)
-	 ? В Политику конфеденциальности нужно добавить название сайта
-	 ? Убрать из описания сайта название шаблона Startup HTML добавить туда Индивидуальное обучение трейдингу от Артёма Ивина
-	 ? Проверить отзывы!!!
-	 ? Первое фото чуть ближе к центру сместить нужно, как то она совсем сбоку, (можно надписи левее сдвинуть)
-	 ? Бегущую строку сделать как раньше.
-	 todo В блоке Пробелы в знаниях слово Выбор на заднем фоне убрать 
-	 ? Статистика открыта и говорит сама за себя вЫДЕЛИТЬ
-	 ? Перед блоком ЗАПИШИТЕСЬ НА КУРС нужно сократить пробел между блоками.
-	 ? Политика конфиденциальности (ПОДСВЕТИТЬ)
-	 ? Ссылку для пополнения qiwi ( qiwi.com/p/79537385366 ) а юмани вот эту ( https://yoomoney.ru/to/410011542528807 )
-	 
-	 todo Провести полную оптимизацию, проверить валидность!!!
 -->
