--- a/todo.html
+++ b/todo.html
@@ -1,20 +1,16 @@
 <!-- 
 todo 1. в первой кнопке Записаться на курс нужно сделать поп ап окно, так как человек кликает, и пропускает весь сайт.
-
 *2. Значек биткоина и рамка, убрать
-
 todo 3. В тарифах выровнять текст влево и добавить поп апы с подробностями курсов
 
-? 4. вместо одной, сделать 2 карусели рядом, одна статистика, вторая отзывы. как думаешь, правильное решение?
-
-? 5.На айфон 11 в списке для выбора тарифа не вмещаются полные названия. По последним двум непонятно в чем разница.
-
-
+* 5.На айфон 11 в списке для выбора тарифа не вмещаются полные названия. По последним двум непонятно в чем разница.
 *. Контактная форма не проверяет правильность заполнения полей (я в телефон указал буквы, в почте - кириллицу и спец.символы)
-
 todo 9.Не хватает информационного блока с кратким ознакомлением, что такое трейдинг и инвестиции. Хотя бы краткую информации. Это будет полезно не только для пользователей, но и для SEO и индексировании поисковыми роботами.
+* 10. Желтый круг на переднем фото убрать, пестрит.
 
-todo 10. Желтый круг на переднем фото убрать, пестрит.
+* 4. Доработка отзывов
+
+* 4. Секция статистика
 
 
 Мелкие доработки
