--- a/todo.html
+++ b/todo.html
@@ -1,7 +1,7 @@
 <!-- 
 todo 1. в первой кнопке Записаться на курс нужно сделать поп ап окно, так как человек кликает, и пропускает весь сайт.
 *2. Значек биткоина и рамка, убрать
-todo 3. В тарифах выровнять текст влево и добавить поп апы с подробностями курсов
+*. В тарифах выровнять текст влево и добавить поп апы с подробностями курсов
 
 * 5.На айфон 11 в списке для выбора тарифа не вмещаются полные названия. По последним двум непонятно в чем разница.
 *. Контактная форма не проверяет правильность заполнения полей (я в телефон указал буквы, в почте - кириллицу и спец.символы)
