--- a/app/index.html
+++ b/app/index.html
@@ -140,7 +140,8 @@
 					<span>-На деньги с трейдинга посетил 61 страну.</span>
 					<span>-Все ученики зарабатывают на бирже</span>
 					<span><a class="now__description--accent"
-							href="https://vk.com/away.php?to=https%3A%2F%2Fwww.tinkoff.ru%2Finvest%2Fsocial%2Fprofile%2FArtem_Ivin%2F&el=snippet" target="_blank">-Статистика
+							href="https://vk.com/away.php?to=https%3A%2F%2Fwww.tinkoff.ru%2Finvest%2Fsocial%2Fprofile%2FArtem_Ivin%2F&el=snippet"
+							target="_blank">-Статистика
 							открыта и говорит сама за себя<br> в отличии от 99% курсов</a></span>
 					<span>ПОЛНОСТЬЮ ИНДИВИДУАЛЬНОЕ обучение, <br> где вам ответят на ВАШИ вопросы </span>
 					<span>и обучение на примере ВАШИХ компаний</span>
@@ -241,13 +242,15 @@
 						<span class="item__desc">Пошагово через демонстрацию экрана я покажу и расскажу как найти,
 							проанализировать технически и фундаментально, купить, и продать акции компании с
 							прибылью. Этот курс позволит тебе стабильно зарабатывать постоянно.</span>
-							<span class="rate__more" id="callMore1">Подробнее</span>
+						<span class="rate__more" id="callMore1">Подробнее</span>
 						<div class="item__price">
 							<span>Цена курса:</span>
 							<div class="discount">
 								<span class="discount__sale">35 000р</span>
 								<span class="item__price--accent">25 000р</span>
 							</div>
+							<a href="https://auth.robokassa.ru/Merchant/Index.aspx?MerchantLogin=artemivin.ru&InvId=0&Culture=ru&Encoding=utf-8&Description=PREMIUM%20PRIVATE%20SKYPE&OutSum=25000&SignatureValue=28f1824d68f9a109852953259d0e161d#"
+								class="rate__pay btn" target="_blank">Оплатить</a>
 						</div>
 					</div>
 				</div>
@@ -258,13 +261,15 @@
 						<span class="item__desc">Ты сможешь лично задать все вопросы по своему портфелю, стратегии,
 							техническому и фундаментальному анализу или сложной ситуации с конкретной акцией. Или например
 							заполнить пробелы в теме криптовалют или IPO.</span>
-							<span class="rate__more" id="callMore2">Подробнее</span>
+						<span class="rate__more" id="callMore2">Подробнее</span>
 						<div class="item__price">
 							<span>Цена курса:</span>
 							<div class="discount">
 								<span class="discount__sale">5 000р</span>
 								<span class="item__price--accent">3 500р</span>
 							</div>
+							<a href="https://vk.com/away.php?to=https%3A%2F%2Fauth.robokassa.ru%2FMerchant%2FIndex.aspx%3FMerchantLogin%3Dartemivin.ru%26InvId%3D0%26Culture%3Dru%26Encoding%3Dutf-8%26Description%3DSKYPE%26OutSum%3D3500%26SignatureValue%3D44152c12012f44820c514d2efa722f4c&cc_key="
+								class="rate__pay btn" target="_blank">Оплатить</a>
 						</div>
 					</div>
 				</div>
@@ -275,22 +280,22 @@
 						<span class="item__desc">Я каждый день выкладываю точки входа и выхода из основных сделок, которые
 							есть у меня в портфеле. Если у тебя нет времени и желания учиться самому, но ты хочешь уже сейчас
 							зарабатывать на фондовом рынке, этот вариант для тебя.</span>
-							<span class="rate__more" id="callMore3">Подробнее</span>
-						<div class="item__price item__price--width">
+						<span class="rate__more" id="callMore3">Подробнее</span>
+						<div class="item__price">
 							<div class="price__wrapp">
-								<span>Цена за 1 месяц:</span>
-								<div class="discount">
-									<span class="item__price--accent">1 000р</span>
-								</div>
-							</div>
 
-							<br>
-							<div class="price__wrapp">
-								<span>Цена за 1 год:</span>
-								<div class="discount">
-									<span class="item__price--accent item__price--margin">10 000р</span>
+								<div class="radio__wrap">
+									<input name="rate" class="radio__price" type="radio" id="rate1" checked>
+									<label for="rate1" class="radio__label" onclick="change1()">Цена за 1 месяц: <span class="item__price--accent">1 000р</span></label>
 								</div>
+
+								<div class="radio__wrap">
+									<input name="rate" class="radio__price" type="radio" id="rate2">
+									<label for="rate2" class="radio__label" onclick="change2()">Цена за 1 год: <span class="item__price--accent">10 000р</span></label>
+								</div>
+
 							</div>
+							<a href="https://vk.com/away.php?to=https%3A%2F%2Fauth.robokassa.ru%2FMerchant%2FIndex.aspx%3FMerchantLogin%3Dartemivin.ru%26InvId%3D0%26Culture%3Dru%26Encoding%3Dutf-8%26Description%3DTELEGRAM%25201%2520MONTH%26OutSum%3D1000%26SignatureValue%3D5e14e9791a371b4e929e375b1c427a86&cc_key=" class="rate__pay btn" id="robokassa" target="_blank">Оплатить</a>
 						</div>
 					</div>
 				</div>
@@ -508,20 +513,23 @@
 					<div class="select" data-state="">
 						<div class="select__title" data-default="Option 0">Индивидуальный курс</div>
 						<div class="select__content">
-						  <input id="singleSelect0" class="select__input" type="radio" value="Индивидуальный курс" name="tarif" checked />
-						  <label for="singleSelect0" class="select__label">Индивидуальный курс</label>
-						  <input id="singleSelect1" class="select__input" type="radio" value="Индивидуальная консультация"  name="tarif"/>
-						  <label for="singleSelect1" class="select__label">Индивидуальная консультация</label>
-						  <input id="singleSelect2" class="select__input" type="radio" value="Сигналы 1 месяц" name="tarif"/>
-						  <label for="singleSelect2" class="select__label">Сигналы 1 месяц</label>
-						  <input id="singleSelect3" class="select__input" type="radio" value="Сигналы 1 год" name="tarif"/>
-						  <label for="singleSelect3" class="select__label">Сигналы 1 год</label>
+							<input id="singleSelect0" class="select__input" type="radio" value="Индивидуальный курс"
+								name="tarif" checked />
+							<label for="singleSelect0" class="select__label">Индивидуальный курс</label>
+							<input id="singleSelect1" class="select__input" type="radio" value="Индивидуальная консультация"
+								name="tarif" />
+							<label for="singleSelect1" class="select__label">Индивидуальная консультация</label>
+							<input id="singleSelect2" class="select__input" type="radio" value="Сигналы 1 месяц"
+								name="tarif" />
+							<label for="singleSelect2" class="select__label">Сигналы 1 месяц</label>
+							<input id="singleSelect3" class="select__input" type="radio" value="Сигналы 1 год" name="tarif" />
+							<label for="singleSelect3" class="select__label">Сигналы 1 год</label>
 						</div>
-					 </div>
+					</div>
 					<div class="personal">
 						<input type="checkbox" id="personal" checked name="personal" class="personal__checkbox _req"">
-						<label for="personal" class="personal__label"><span>	Согласен(а) на <a href="#" class="personal__link">обработку
-							персональных данных</a></span></label>
+						<label for=" personal" class="personal__label"><span> Согласен(а) на <a href="#" class="personal__link">обработку
+								персональных данных</a></span></label>
 					</div>
 					<button type="submit" class="btn form__btn">Записаться на курс</button>
 				</form>
@@ -546,10 +554,10 @@
 							<div class="social">
 
 
-								<a href="https://api.whatsapp.com/send?phone=79537385366=" class="social__link" target="_blank"><img
-										src="images/dest/whatsapp.png" alt="whatsapp"></a>
-								<a href="https://vk.com/ivinartem" class="social__link" target="_blank"><img src="images/dest/vk.png"
-										alt="vk"></a>
+								<a href="https://api.whatsapp.com/send?phone=79537385366=" class="social__link"
+									target="_blank"><img src="images/dest/whatsapp.png" alt="whatsapp"></a>
+								<a href="https://vk.com/ivinartem" class="social__link" target="_blank"><img
+										src="images/dest/vk.png" alt="vk"></a>
 								<a href="https://www.instagram.com/arteminvesting/" class="social__link" target="_blank"><img
 										src="images/dest/insatgram.png" alt="instagram"></a>
 							</div>
@@ -563,8 +571,8 @@
 								<li><img src="images/dest/tinkoff.png" alt="tinkoff">Тинькофф: 5536 9138 0112 4880</li>
 								<li><a href="https://yoomoney.ru/to/410011542528807" target="_blank"><img
 											src="images/dest/yandex.png" alt="yandex">ЮMoney: 410011542528807</a></li>
-								<li><a href="https://qiwi.com/payment/form/99999?extra[%27accountType%27]=phone&extra%5B%27account%27%5D=79537385366" target="_blank"><img src="images/dest/qiwi.png"
-											alt="qiwi">Qiwi: +79537385366</a></li>
+								<li><a href="https://qiwi.com/payment/form/99999?extra[%27accountType%27]=phone&extra%5B%27account%27%5D=79537385366"
+										target="_blank"><img src="images/dest/qiwi.png" alt="qiwi">Qiwi: +79537385366</a></li>
 								<li><img src="images/dest/btc.png">16f6eVesR9WRCjQ5gG7nPgRJDyuQeXwycB</li>
 							</ul>
 						</div>
@@ -717,7 +725,9 @@
 					<h4 class="more__title">Индивидуальный курс технического и фундаментального анализа</h4>
 				</div>
 				<p>
-					Далеко-далеко за словесными горами в стране гласных и согласных, живут рыбные тексты. Вскоре осталось ведущими текстами взобравшись, за пустился мир рекламных продолжил свой своих что он. Встретил, маленькая? Большой домах если страна.
+					Далеко-далеко за словесными горами в стране гласных и согласных, живут рыбные тексты. Вскоре осталось
+					ведущими текстами взобравшись, за пустился мир рекламных продолжил свой своих что он. Встретил,
+					маленькая? Большой домах если страна.
 				</p>
 				<a class="close2" href="#">Закрыть</a>
 			</div>
@@ -729,10 +739,12 @@
 				<a href="#" class="close"><img src="images/dest/close.png" alt="close"></a>
 				<div class="title__block">
 					<h4 class="more__title">1 Индивидуальная консультация по SKYPE, 60 минут</h4>
-					
+
 				</div>
 				<p>
-					Далеко-далеко за словесными горами в стране гласных и согласных, живут рыбные тексты. Вскоре осталось ведущими текстами взобравшись, за пустился мир рекламных продолжил свой своих что он. Встретил, маленькая? Большой домах если страна.
+					Далеко-далеко за словесными горами в стране гласных и согласных, живут рыбные тексты. Вскоре осталось
+					ведущими текстами взобравшись, за пустился мир рекламных продолжил свой своих что он. Встретил,
+					маленькая? Большой домах если страна.
 				</p>
 				<a class="close2" href="#">Закрыть</a>
 			</div>
@@ -746,47 +758,12 @@
 					<h4 class="more__title">Сигналы на покупку и продажу акций</h4>
 				</div>
 				<p>
-					Далеко-далеко за словесными горами в стране гласных и согласных, живут рыбные тексты. Вскоре осталось ведущими текстами взобравшись, за пустился мир рекламных продолжил свой своих что он. Встретил, маленькая? Большой домах если страна.
+					Далеко-далеко за словесными горами в стране гласных и согласных, живут рыбные тексты. Вскоре осталось
+					ведущими текстами взобравшись, за пустился мир рекламных продолжил свой своих что он. Встретил,
+					маленькая? Большой домах если страна.
 				</p>
 				<a class="close2" href="#">Закрыть</a>
 			</div>
-		</div>
-	</div>
-
-	<!-- Form_popup -->
-	<div id="popup_form" class="bg__modal">
-		<div class="modals form">
-			<a href="#" class="close"><img src="images/dest/close.png" alt="close"></a>
-				<div class="form__content" id="form">
-					<form action="#" id="form__send" method="POST" class="form__wrap">
-						<label for="name" class="form__label">Ваше имя:</label>
-						<input type="text" id="name" name="name" class="form__input _req _name" placeholder="Артём Ивин">
-						<label for="tel" class="form__label">Ваш телефон:</label>
-						<input type="text" id="tel" name="tel" class="form__input _req _phone" placeholder="+79537777777">
-						<label for="email" class="form__label">Ваш E-mail:</label>
-						<input type="text" id="email" name="email" class="form__input _req _email" placeholder="example@mail.ru">
-						<label for="tarif" class="form__label">Выбор тарифа:</label>
-						<div class="select">
-							<div class="select__title" data-default="Option 0">Индивидуальный курс</div>
-							<div class="select__content">
-							  <input id="singleSelect0" class="select__input" type="radio" value="Индивидуальный курс" name="tarif" checked />
-							  <label for="singleSelect0" class="select__label">Индивидуальный курс</label>
-							  <input id="singleSelect1" class="select__input" type="radio" value="Индивидуальная консультация"  name="tarif"/>
-							  <label for="singleSelect1" class="select__label">Индивидуальная консультация</label>
-							  <input id="singleSelect2" class="select__input" type="radio" value="Сигналы 1 месяц" name="tarif"/>
-							  <label for="singleSelect2" class="select__label">Сигналы 1 месяц</label>
-							  <input id="singleSelect3" class="select__input" type="radio" value="Сигналы 1 год" name="tarif"/>
-							  <label for="singleSelect3" class="select__label">Сигналы 1 год</label>
-							</div>
-						 </div>
-						<div class="personal">
-							<input type="checkbox" id="personal" checked name="personal" class="personal__checkbox _req"">
-							<label for="personal" class="personal__label"><span>	Согласен(а) на <a href="#" class="personal__link">обработку
-								персональных данных</a></span></label>
-						</div>
-						<button type="submit" class="btn form__btn">Записаться на курс</button>
-					</form>
-				</div>
 		</div>
 	</div>
 
@@ -794,7 +771,7 @@
 
 	<div class="thanks__popup">
 		<div class="thanks__popup_content">
-			<h3><span>Ваша заявка принята!</span>Мы с свяжемся Вами  ближайшее время</h3>
+			<h3><span>Ваша заявка принята!</span>Мы с свяжемся Вами ближайшее время</h3>
 			<a href="#" class="close__btn"></a>
 		</div>
 	</div>
