--- a/app/index.html
+++ b/app/index.html
@@ -51,7 +51,7 @@
 							src="images/dest/insatgram-dark.png" alt="insatgram"></a>
 					<a href="https://vk.com/ivinartem" class="social__item" target="_blank"><img
 							src="images/dest/vk-dark.png" alt="vk"></a>
-					<a href="" class="social__item" target="_blank"><img src="images/dest/whatsapp-dark.png"
+					<a href="https://api.whatsapp.com/send?phone=79537385366=" class="social__item" target="_blank"><img src="images/dest/whatsapp-dark.png"
 							alt="whatsapp"></a>
 				</div>
 
@@ -89,7 +89,7 @@
 							<li class="included__item">Торговые сигналы по акциям</li>
 						</ul>
 					</div>
-					<a href="#" class="btn btn--top" id="callForm">Записаться на курс</a>
+					<a href="#" class="btn btn--top" data-scroll="#form">Записаться на курс</a>
 				</div>
 				<div class="play">
 					<div class="play__wrapp">
@@ -300,7 +300,7 @@
 					</div>
 				</div>
 			</div>
-			<a href="#" class="btn" data-scroll="#form">Оставить заявку</a>
+			<!-- <a href="#" class="btn" data-scroll="#form">Оставить заявку</a> -->
 		</div>
 	</section>
 	<!-- /.rate -->
@@ -364,6 +364,7 @@
 	</section>
 	<!-- /.review -->
 
+	<!-- FAQ -->
 	<section class="faq" id="faq">
 		<div class="container">
 			<div class="heading">
@@ -490,9 +491,34 @@
 			</div>
 		</div>
 	</section>
+	<!-- /.faq -->
+
+	<!-- INFO -->
+	<!-- <section class="info" id="info">
+		<div class="container">
+			<div class="heading">
+				<p class="heading__subtitle"><span class="heading__title heading__title--accent">З</span>ачем нужен трейдинг и инвестирование</p>
+			</div>
+			<div class="reviews__content slider">
+				<div class="reviews__item">
+					<img src="images/dest/stat1.jpg" alt="stat">
+				</div>
+				<div class="reviews__item">
+					<img src="images/dest/stat2.jpg" alt="stat">
+				</div>
+				<div class="reviews__item">
+					<img src="images/dest/stat3.jpg" alt="stat">
+				</div>
+				<div class="reviews__item">
+					<img src="images/dest/stat4.jpg" alt="stat">
+				</div>
+			</div>
+		</div>
+	</section> -->
+	<!-- /.INFO -->
 
 	<!-- Form -->
-	<section class="form">
+	<section class="form" id="form">
 		<img src="images/dest/artem.png" alt="author" class="form__author">
 		<div class="container">
 			<div class="heading">
@@ -528,7 +554,7 @@
 					</div>
 					<div class="personal">
 						<input type="checkbox" id="personal" checked name="personal" class="personal__checkbox _req"">
-						<label for=" personal" class="personal__label"><span> Согласен(а) на <a href="#" class="personal__link">обработку
+						<label for="personal" class="personal__label"><span> Согласен(а) на <a href="#" class="personal__link">обработку
 								персональных данных</a></span></label>
 					</div>
 					<button type="submit" class="btn form__btn">Записаться на курс</button>
