--- a/todo.html
+++ b/todo.html
@@ -1,26 +1,26 @@
 <!-- 
-todo 1. в первой кнопке Записаться на курс нужно сделать поп ап окно, так как человек кликает, и пропускает весь сайт.
-*2. Значек биткоина и рамка, убрать
-*. В тарифах выровнять текст влево и добавить поп апы с подробностями курсов
-
-* 5.На айфон 11 в списке для выбора тарифа не вмещаются полные названия. По последним двум непонятно в чем разница.
+*.1. Значек биткоина и рамка, убрать
+*.2 В тарифах выровнять текст влево и добавить поп апы с подробностями курсов
+* 
 *. Контактная форма не проверяет правильность заполнения полей (я в телефон указал буквы, в почте - кириллицу и спец.символы)
 todo 9.Не хватает информационного блока с кратким ознакомлением, что такое трейдинг и инвестиции. Хотя бы краткую информации. Это будет полезно не только для пользователей, но и для SEO и индексировании поисковыми роботами.
-* 10. Желтый круг на переднем фото убрать, пестрит.
+* 10.Желтый круг на переднем фото убрать, пестрит.
 
-* 4. Доработка отзывов
+* 4.Доработка отзывов
 
-* 4. Секция статистика
+* 4.Секция статистика
+* 5 Реализовать кнопки оплаты ROBOCASSA
 
 
 Мелкие доработки
-* 1. Статистика открыта и говорит сама за себя- ссылку лучше в новом окне чтобы открывалась
-* 2. Ссылки на соцсети лучше также открывать в новом окне, чтобы не уводить с сайта
-* 3. В сообщении после отправки заявки лучше указать не только, что она принята, а чего теперь ждать(написать что мы с вами свяжемся ближайшее время)
+* 1.Статистика открыта и говорит сама за себя- ссылку лучше в новом окне чтобы открывалась
+* 2.Ссылки на соцсети лучше также открывать в новом окне, чтобы не уводить с сайта
+* 3.В сообщении после отправки заявки лучше указать не только, что она принята, а чего теперь ждать(написать что мы с вами свяжемся ближайшее время)
 * 4 Блок чему Вы научитесь увеличить шрифт (Просмотреть на всех разрешениях)
 *.5 Для пунктов меню и иконок соцсетей .добавить ховер 
 *.6 В мобильной версии уменьшить пространстов после " подитика конфиденциальности" 
 *.7 в мобильной версии кнопку записаться на курс выровнять по центру как остальные
+* 3.На айфон 11 в списке для выбора тарифа не вмещаются полные названия. По последним двум непонятно в чем разница.
 
 ! Мои неджоработки
 
